--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.2.2",
+    "dotenv": "^16.0.3",
+    "javascript-time-ago": "^2.5.9",
+    "lodash": "^4.17.21",
     "next": "latest",
+    "next-auth": "^4.18.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-time-ago": "^7.2.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
