--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "react-time-ago": "^7.2.1"
+    "react-loader-spinner": "^5.3.4",
+    "react-time-ago": "^7.2.1",
+    "react-tooltip": "^5.5.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
